Changes for 3.3.0

New features:
A.F.I..PS. [ZBXNEXT-3344] increased SNMP OID length limitation from 255 to 512 bytes; thanks to Patrick Hemmer for patch (Cemeris, Gunars, Sasha, viktors)
A.......S. [ZBX-9425] added permission check on the server side for global script execution (Sergejs)

Bug fixes:
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.2rc1

New features:
........S. [ZBXNEXT-1859] improved performance by not inserting events of auto registration if no such action was enabled, insert/update/select in a bulk on auto registration data from proxy (Sasha, vso)
..FG.....T [ZBXNEXT-3487] added new key for virtual memory monitoring on Windows (vso, wiper)
A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped forward slash restriction in "Tag name" and "Tag for matching" (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
..F....... [ZBX-11219] renamed second argument for net.dns and net.dns.record items from "zone" to "name" (Cemeris)
..F....... [ZBX-8457] fixed user macro resolving for templated host and templates (Oleg)
..F....... [ZBX-11367] fixed xml import when non-snmp interfaces have incorrect parameter "bulk" (Gunars)
..F....... [ZBX-10388] removed duplicated data and reduced traffic for hint popups (Gunars)
..F....... [ZBX-11331] fixed JS error in Configuration->Discovery edit page (Oleg)
...G...... [ZBX-10906] fixed agent active checks being delayed if system time was pushed back (wiper)
..F....... [ZBX-11324] fixed undefined index in screen and map import pages (Oleg)
....I..... [ZBX-11038] removed compression for the generated CSS files, added "sass" folder to the distribution archive (asaveljevs)